@@ -3,7 +3,7 @@
 #   case-control data.
 coxexact.fit <- function(x, y, strata, offset, init, control,
 			  weights, method, rownames,
-                         resid=TRUE, concordance=FALSE)
+                         resid=TRUE)
     {
     if (!is.matrix(x)) stop("Invalid formula for cox fitting function")
     if (!is.null(weights) && any(weights!=1))
@@ -151,11 +151,5 @@ coxexact.fit <- function(x, y, strata, offset, init, control,
                       method = method,
                       class = 'coxph')
     }
-
-    if (concordance) {
-        rval$concordance <-concordance.fit(Surv(y[,1], y[,2]),
-                                             lp, strata, reverse=TRUE)
-    }
-    
     rval
 }
