@@ -515,7 +515,6 @@ coxpenal.fit <- function(x, y, strata, offset, init, control,
 		 linear.predictors = as.vector(lp),
 		 residuals = resid,
 		 means = means,
-                 concordance= concordance.fit(y, lp, strata, weights, reverse=TRUE),
                  method = method,
 		 class = c('coxph.penal', 'coxph'),
 		 frail = coxfit$fcoef,
@@ -533,7 +532,6 @@ coxpenal.fit <- function(x, y, strata, offset, init, control,
 		 linear.predictors = as.vector(lp),
 		 residuals = resid,
 		 means = means,
-                 concordance= concordance.fit(y, lp, strata, weights, reverse=TRUE),
                  method = method, 
 		 class = c('coxph.penal', 'coxph'),
 		 frail = coxfit$fcoef,
@@ -554,7 +552,6 @@ coxpenal.fit <- function(x, y, strata, offset, init, control,
 	     linear.predictors = lp,
 	     residuals = resid,
 	     means = means,
-             concordance= concordance.fit(y, lp, strata, weights, reverse=TRUE),
              method = method,
 	     class = c('coxph.penal', 'coxph'),
 	     df = df, df2=dftemp$df2,
