@@ -60,17 +60,11 @@ summary.coxph <- function(object,  conf.int = 0.95, scale = 1, ...) {
     rval$used.robust<-!is.null(cox$naive.var)
 
     if (!is.null(cox$concordance)) {
-        ctemp <- object$concordance
-        # A stratified model has a matrix of values, one row per strata
-        if (is.matrix(ctemp$count)) temp <- colSums(ctemp$count)
-        else temp <- ctemp$count
-        # C= (concordant + tied/2)/(concordant + discordant + tied)
-        rval$concordance <- c((temp[1] + temp[3]/2)/sum(temp[1:3]),
-                              sqrt(ctemp$var[1]))
+        # throw away the extra info, in the name of backwards compatability
+        rval$concordance <- cox$concordance[6:7]
         names(rval$concordance) <- c("C", "se(C)")
     }
-        
-
+ 
     class(rval)    <-"summary.coxph"
     rval
     }
