@@ -11,9 +11,9 @@
 }
 \usage{
 agreg.fit(x, y, strata, offset, init, control, weights, method,
-rownames, resid=TRUE, concordance=TRUE)
+rownames, resid=TRUE)
 coxph.fit(x, y, strata, offset, init, control, weights, method,
-rownames, resid=TRUE, concordance=TRUE)
+rownames, resid=TRUE)
 }
 \arguments{
   \item{x}{Matix of predictors.  This should \emph{not} include an
@@ -31,7 +31,6 @@ rownames, resid=TRUE, concordance=TRUE)
   \item{rownames}{this is only needed for a NULL model, in which case it
     contains the rownames (if any) of the original data.}
   \item{resid}{compute and return residuals.}
-  \item{concordance}{compute and return the concordance.}
 }
 \details{
 This routine does no checking that arguments are the proper length or
