@@ -29,7 +29,7 @@ coxpenal.fit(x, y, strata, offset, init, control, weights, method,
     rownames, pcols, pattr, assign)
 coxph.wtest(var, b, toler.chol = 1e-09)
 agexact.fit(x, y, strata, offset, init, control, weights, method,
-    rownames, resid=TRUE, concordance=FALSE) 
+    rownames, resid=TRUE) 
 survfitCI(X, Y, weights,  id, istate,
                        type=c('kaplan-meier', 'fleming-harrington', 'fh2'),
                        se.fit=TRUE,
